Closed Bug 1631133 Opened 4 years ago Closed 4 years ago

MToNumberInt32 does not directly map to CacheIR's GuardToInt32Index

Categories

(Core :: JavaScript Engine: JIT, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: evilpie, Assigned: evilpie)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

By default MToNumberInt32 uses IntConversionInputKind::Any, which will convert null to 0. IntConversionInputKind::NumbersOnly matches GuardToInt32Index, which only accepts double/int.

Assignee: nobody → evilpies
Status: NEW → ASSIGNED
Assignee: evilpies → nobody
Status: ASSIGNED → NEW
No longer depends on: 1629867
Regressed by: 1629867
Has Regression Range: --- → yes
Keywords: regression
Assignee: nobody → evilpies
Pushed by evilpies@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/9226f5b0d05b
MToNumberInt32 does not directly map to CacheIR's GuardToInt32Index. r=iain
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: