Bug 1631133 - MToNumberInt32 does not directly map to CacheIR's GuardToInt32Index. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D71419